--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "devDependencies": {
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
     "parcel": "^2.7.0",
     "process": "^0.11.10"
   },
@@ -30,7 +33,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
-    "browserslist": [
-      "last 2 Chrome versions"
-    ]
+  "browserslist": [
+    "last 2 Chrome versions"
+  ]
 }
